mock/crates/hilavitkutin-extensions-macros/tests/fixtures/fail/capability_type_missing_impl.rs
//! Capability type does not implement `CapabilityExport`.

use hilavitkutin_extensions_macros::export_extension;

pub struct NotACap;

#[export_extension(capabilities = [NotACap])]
pub struct InvalidCap;

fn main() {}
