mock/crates/hilavitkutin-extensions-macros/tests/fixtures/fail/capability_type_missing_impl.stderr
error[E0277]: the trait bound `NotACap: CapabilityExport` is not satisfied
 --> tests/fixtures/fail/capability_type_missing_impl.rs:7:36
  |
7 | #[export_extension(capabilities = [NotACap])]
  |                                    ^^^^^^^ unsatisfied trait bound
  |
help: the trait `CapabilityExport` is not implemented for `NotACap`
 --> tests/fixtures/fail/capability_type_missing_impl.rs:5:1
  |
5 | pub struct NotACap;
  | ^^^^^^^^^^^^^^^^^^
